# projeto-rubik

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.c  main.cpp  makefile  performance.txt  populate.out  positions.pos  saida  saida.txt  test.cpp  teste.cpp
bibliotecas/: variaveis-ambiente.c  variaveis-ambiente.cpp  variaveis-ambiente.h
cmake/: LinkRubikOpenMP.cmake
examples/: CMakeLists.txt  CMakePresets.json  rubik_example.cpp  score_example.cpp  teste.cpp  teste1.cpp  teste2.cpp
lib/rubik/: CMakeLists.txt
lib/rubik/include/: Historic.h  Rubik.h  RubikPosition.h  Utils.h
lib/rubik/include/helpers/: Corners.h  Edges.h  Face.h  Genetic.h  Layer.h  Move.h  Pieces.h  Restriction.h  Sticker.h  StickerCoord.h  constantes.h
lib/rubik/include/scores/: Analyzer.h  Config.h  GeneticTunner.h  Score.h  Tunner.h
lib/rubik/include/scores/basic-score/: BasicAnalyzer.h  BasicConfig.h  BasicGeneticTunner.h  BasicScore.h  BasicTunner.h
lib/rubik/include/solvers/: BruteForce.h  EKGeneticSolver.h  Greedy.h  Solver.h  temp.h
lib/rubik/src/: Historic.cpp  Random.cpp  Rubik.cpp  RubikPosition.cpp  Utils.cpp
lib/rubik/src/helpers/: Color.cpp  Corners.cpp  Edges.cpp  Face.cpp  Layer.cpp  Move.cpp  Pieces.cpp  Restriction.cpp  Sticker.cpp  StickerCoord.cpp
lib/rubik/src/scores/: Config.cpp
lib/rubik/src/scores/basic-score/: BasicAnalyzer.cpp  BasicConfig.cpp  BasicGeneticTunner.cpp  BasicScore.cpp  BasicTunner.cpp
lib/rubik/src/solvers/: BruteForce.cpp  Solver.cpp
managers/: DatabaseManager.cpp  DatabaseManager.h
rubik/: GeneticRubik.h  Rubik.cpp  Rubik.h  Solver.cpp  Solver.h  Utils.cpp  Utils.h  branch.c  branch.h  rubik.c  rubik.cpp  rubik.h
rubik/auxiliares/: 1StickerCoord.cpp  Color.h  Coners.cpp  Corners.cpp  Corners.h  Edges.cpp  Edges.h  Face.cpp  Face.h  Genetic.h  Layer.h  Move.cpp  Move.h  Restriction.cpp  Sticker.cpp  Sticker.h  StickerCoord.cpp  StickerCoord.h  constantes.h
rubik/auxiliares/enums/: Coord.h  CornerState.h  Faces.h
rubik/class/: rubik.cpp  rubik.h
rubik/class/auxiliares/: Adesivo.h  Cor.h  Face.h
rubik/classes/: Rubik.cpp  Rubik.h
rubik/classes/auxiliares/: Color.cpp  Color.h  Face.cpp  Face.h  Layer.cpp  Layer.h  Move.cpp  Move.h  Restriction.cpp  Restriction.h  Sticker.cpp  Sticker.h  constantes.h  constants.h
rubik/helpers/: constantes.cpp  cores.c  cores.cpp  criacao-destruicao.c  operacoes-face.c  operacoes-face.cpp
rubik/scores/: Analyzer.h  AnalyzerMultiple.h  BasicScore.cpp  BasicScore.h  GeneticTunner.h  PontuationTable.cpp  PontuationTable.h  Score.cpp  Score.h  Tunner.h
rubik/scores/analyzer/: main.cpp  makefile
rubik/scores/basic-score/: BasicAnalyzer.cpp  BasicAnalyzer.h  BasicConfig.cpp  BasicConfig.h  BasicGeneticTunner.cpp  BasicGeneticTunner.h  BasicScore.cpp  BasicScore.h  BasicTunner.cpp  BasicTunner.h
rubik/solvers/: BruteForce.cpp  BruteForce.h  EKGeneticSolver.h  Genetic.cpp  Genetic.h  Greedy.cpp  Greedy.h  Solver.cpp  Solver.h  temp.h
rubik/structures/: historico.c  historico.cpp
rubik/utils/: historico.c
scrambles/: 10moves.txt  11moves.txt  12moves.txt  13moves.txt  14moves.txt  15moves.txt  16moves.txt  17moves.txt  18moves  18moves.txt  19moves.txt  1move  1move.txt  20moves  20moves.txt  2moves.txt  3moves.txt  4moves.txt  5moves.txt  6moves.txt  7moves.txt  8moves.txt  9moves.txt  populate_scrambles.cpp
scripts/: makefile  scrambles.cpp
services/: Random.cpp  Random.h
tuning/basic-score/: analyzer.cpp  tuning.cpp
tuning/scrambles/: generator.cpp
(+19 files in other folders)
